deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: beehive
  labels:
    app.kubernetes.io/part-of: beehive-im
